# Miktos-Kosmos

./: .editorconfig  .gitignore  4_WEEK_SAFETY_PLAN.md  ALL_QUALITY_METRICS_IN_SUMMARY.md  ARCHITECTURE.md  BRIDGE_PANEL_SYSTEM_COMPLETE.md  BRUTAL_REALITY_CHECK.md  CHANGELOG.md  CLEANUP_REMOVE_EMOJIS.md  CONTRIBUTING.md  CURRENT_STATE_ANALYSIS.md  DESIGN_FIXES.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  FEATURE_LOADING_STATE_ANIMATION.md  FEATURE_WORKING_FOLDER_DISPLAY.md  FIX_DUPLICATE_TITLE.md  FIX_FILE_TYPES_DETECTION.md  FIX_HTML_PARSE_ERROR.md  FIX_SCAN_FOLDER_ERROR.md  FOLDER_TREE_IMPLEMENTATION.md  GETTING_STARTED.md  HOME_ANALYSIS.md  HTML_PARSE_ERROR_FIXED.md  LAYOUT_SYSTEM_COMPLETE.md  LICENSE  MERGED_QUALITY_TO_SUMMARY.md  NAVIGATION_RESTRUCTURE_COMPLETE.md  PHASE1_COMPLETE.md  PHASE_2_REALTIME_PROGRESS_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  RESPONSIVE_GRID_SYSTEM_FIX.md  ROADMAP.md  RUST_LIST_DIRECTORY_IMPLEMENTATION.md  STRUCTURE_COMPLETE.md  SUMMARY_README_FIX_AND_PLAN.md  TOOLSPANEL_IMPLEMENTATION.md  TOOLSPANEL_PREVIEW.md  (+7 more)
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  executor.rs  main.rs  organizer.rs  scanner.rs  types.rs
src/lib/: types.ts
src/lib/components/: DirectoryPicker.svelte  FileBrowser.svelte  FileCarousel.svelte  PreviewCard.svelte  ScanResults.svelte
src/lib/layouts/: FlexWorkspace.svelte  LayoutSwitcher.svelte  Panel.svelte  PanelWorkspace.svelte  Workspace.svelte  store.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
(+38 files in other folders)
