[package]
name = "photoarchive"
version = "0.1.0"
description = "Privacy-first family photo organizer"
authors = ["Angel Torrella"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
image = "0.25"
rusqlite = { version = "0.32", features = ["bundled"] }
rayon = "1.8"
thiserror = "1.0"
kamadak-exif = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
